k8s/app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: app
spec:
  ingressClassName: nginx
  tls:
  - secretName: nalut.de # same as in certificate
    hosts:
      - "*.nalut.de"
  rules:
    - host: test.nalut.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 80
